Bug 871192 - Fix more rooting hazards in the JS debugger; r=till